force-app/main/default/objects/Krow__Invoice__c/fields/Krow__AcctSeed_Billing_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__AcctSeed_Billing_Id__c</fullName>
    <description>Id for AccountingSeed Billing record which is created for this Invoice.</description>
    <label>AccountingSeed Billing Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>