force-app/main/default/objects/Krow__Invoice__c/fields/Krow__AcctSeed_Message__c.field-meta.xml
<CustomField>
    <fullName>Krow__AcctSeed_Message__c</fullName>
    <description>Message contains if Billing records is created for this invoice.</description>
    <label>AccountingSeed Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>