force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Additional_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Krow__Additional_Amount_Total__c</fullName>
    <label>Additional Amount</label>
    <summarizedField>Krow__Invoice_Additional_Item__c.Krow__Amount__c</summarizedField>
    <summaryForeignKey>Krow__Invoice_Additional_Item__c.Krow__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>