force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Address__c.field-meta.xml
<CustomField>
    <fullName>Krow__Address__c</fullName>
    <label>Customer Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>