force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Apply_Sales_tax_in_QB__c.field-meta.xml
<CustomField>
    <fullName>Krow__Apply_Sales_tax_in_QB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply Sales tax for Invoice in QB</description>
    <label>Apply Sales tax in QB</label>
    <type>Checkbox</type>
</CustomField>