force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Balance__c.field-meta.xml
<CustomField>
    <fullName>Krow__Balance__c</fullName>
    <formula>Krow__Invoice_Total__c - Krow__Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>