force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Currency__c.field-meta.xml
<CustomField>
    <fullName>Krow__Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>