force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Discount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>