force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Discount_Amount__c</fullName>
    <formula>Krow__Invoice_Subtotal__c *  Krow__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>