force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Display_Tax__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Display/Hide Tax Column on Invoice PDF when Tax does not equal to &quot;GST/QST&quot;</description>
    <inlineHelpText>Display/Hide Tax Column on Invoice PDF when Tax does not equal to &quot;GST/QST&quot;</inlineHelpText>
    <label>Display Tax Column</label>
    <type>Checkbox</type>
</CustomField>