force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Display_Timesheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Timesheet_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked will display the notes on the Invoice detail in invoice pdf</description>
    <label>Display Timesheet Notes</label>
    <type>Checkbox</type>
</CustomField>