force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Footer__c.field-meta.xml
<CustomField>
    <fullName>Krow__Footer__c</fullName>
    <description>Field to show footer at last of invoice</description>
    <inlineHelpText>Field to show footer at last of invoice</inlineHelpText>
    <label>Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>