force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Include_Expense_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Expense_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Expense Receipts</label>
    <type>Checkbox</type>
</CustomField>