force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Include_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Notes</label>
    <type>Checkbox</type>
</CustomField>