force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Intacct_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Invoice_Id__c</fullName>
    <description>Invoice Id generated from intacct</description>
    <label>Intacct Invoice Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>