force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>