force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Amount__c</fullName>
    <label>Labor Amount</label>
    <summarizedField>Krow__Invoice_Line_Item__c.Krow__Amount_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Invoice_Line_Item__c.Krow__Include__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Invoice_Line_Item__c.Krow__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>