force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>