force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Fixed_Item_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Fixed_Item_Total_Amount__c</fullName>
    <label>Invoice Fixed Item Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>