force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Invoice Number External ID</label>
    <type>AutoNumber</type>
</CustomField>