force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Serial_Number__c</fullName>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>