force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Subtotal__c</fullName>
    <formula>(Krow__Invoice_Amount__c + Krow__Fixed_Fee_Amount__c + Krow__Expense_Amount__c+ Krow__Additional_Amount_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>