force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Total__c</fullName>
    <formula>(Krow__Invoice_Subtotal__c - Krow__Discount_Amount__c ) + ROUND(Krow__Total_Tax_Amount__c, 2) +  IF(ISPICKVAL(Krow__Tax_Type__c, &apos;VAT&apos;), 0, ROUND(Krow__Total_Tax_2_Amount__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>