force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Journal_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Journal_Type__c</fullName>
    <label>Journal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Krow Invoice</fullName>
            </value>
            <value>
                <fullName>Vendor Payments</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>