force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Labour_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Labour_Hours__c</fullName>
    <description>Sum Of Hours Of Invoice Line Item</description>
    <label>Labor Hours</label>
    <summarizedField>Krow__Invoice_Line_Item__c.Krow__Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Invoice_Line_Item__c.Krow__Include__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Invoice_Line_Item__c.Krow__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>