force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Paid__c.field-meta.xml
<CustomField>
    <fullName>Krow__Paid__c</fullName>
    <description>Total Amount Paid For Invoice</description>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>