force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Krow__Payment_Information__c</fullName>
    <label>Payment Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>