force-app/main/default/objects/Krow__Invoice__c/fields/Krow__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__PO_Number__c</fullName>
    <formula>Krow__Project__r.Krow__PO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>