force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Post_Invoice_In_Sage__c.field-meta.xml
<CustomField>
    <fullName>Krow__Post_Invoice_In_Sage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Invoice In Sage</label>
    <type>Checkbox</type>
</CustomField>