force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>