force-app/main/default/objects/Krow__Invoice__c/fields/Krow__QB_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__QB_Invoice_Id__c</fullName>
    <description>QuickBook Id of invoice</description>
    <label>QB Invoice Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>