force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Sage_Sales_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sage_Sales_Invoice_Id__c</fullName>
    <label>Sage Sales Invoice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>