force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Service_Notes__c</fullName>
    <label>Service Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>