force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Show_All_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Show_All_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show All Hours</label>
    <type>Checkbox</type>
</CustomField>