force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Summarize__c.field-meta.xml
<CustomField>
    <fullName>Krow__Summarize__c</fullName>
    <label>Summarize</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Totals Only</fullName>
            </value>
            <value>
                <fullName>Summarize by Person</fullName>
            </value>
            <value>
                <fullName>Summarize by Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>