force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax_2__c</fullName>
    <description>This field is used for GST/QST purpose.</description>
    <label>Tax 2 %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>