force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Total_Tax_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Tax_2_Amount__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Krow__Tax_Type__c, &apos;VAT&apos;)), ((( Krow__Additional_Amount_Total__c - (Krow__Additional_Amount_Total__c  * Krow__Discount__c)) * Krow__Tax_2__c ) + ( (Krow__Fixed_Fee_Amount__c - (Krow__Fixed_Fee_Amount__c  * Krow__Discount__c)) * Krow__Tax_2__c) + ( (Krow__Invoice_Amount__c - (Krow__Invoice_Amount__c * Krow__Discount__c )) * Krow__Tax_2__c)+ ( (Krow__Expense_Amount__c - (Krow__Expense_Amount__c * Krow__Discount__c )) * Krow__Tax_2__c)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax 2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>