force-app/main/default/objects/Krow__Invoice__c/fields/Krow__Xero_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Invoice_Id__c</fullName>
    <label>Xero Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>