force-app/main/default/objects/Krow__Invoice__c/listViews/Krow__GST_Tax_Invoice.listView-meta.xml
<ListView>
    <fullName>Krow__GST_Tax_Invoice</fullName>
    <columns>NAME</columns>
    <columns>Krow__Tax_Type__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Invoice_Account__c</columns>
    <columns>Krow__Invoice_Total__c</columns>
    <columns>Krow__Invoice_Subtotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Tax_Type__c</field>
        <operation>equals</operation>
        <value>GST/QST</value>
    </filters>
    <label>GST/QST Tax Invoice</label>
</ListView>